recursion.cons.lessons.recursion.cons.Occurrence.scala.error
occurences:2: error: type mismatch;
 found   : Boolean(false)
 required: Int
	if(l == Nil) return false
                            ^