recursion.cons.lessons.recursion.cons.Occurrence.scala.code
def occurences(l:List[Int], v:Int): Int = {
	if(l == Nil) return false
	if(l.tail == v) return 1+ occurences(l.tail, v);
	return occurences(l.tail, v)
}
